deploy/cassandra.yml
apiVersion: v1
kind: Service
metadata:
  name: cassandra
spec:
  ports:
    - port: 9042
  selector:
    app: cassandra
  type:
    ClusterIP
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: cassandra
  name: cassandra
spec:
  containers:
    - args:
        - /run.sh
      resources:
        limits:
          cpu: "0.1"
      image: gcr.io/google-samples/cassandra:v8
      name: cassandra
      ports:
        - name: cql
          containerPort: 9042
        - name: thrift
          containerPort: 9160
      volumeMounts:
        - name: data
          mountPath: /cassandra_data
  volumes:
    - name: data
      emptyDir: {}
