deploy/ingress.yml
apiVersion: "extensions/v1beta1"
kind: Ingress
metadata:
  name: hello-ingress
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: hello
              servicePort: 80
            path: /api/hello/*
          - backend:
              serviceName: hello-stream
              servicePort: 80
            path: /stream
